<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.freelanceitlab.walletprototype.ExchangeSubmitFragment">

<!-- TODO: Update blank fragment layout -->
<RelativeLayout
    android:id="@+id/exchangeLanding"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/sendLabelTxt" />

    <TextView
        android:id="@+id/sendLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_below="@+id/description"/>

    <EditText
        android:id="@+id/sendAddressInput"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/senderAddress"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@+id/sendLabel" />

    <TextView
        android:id="@+id/receiveLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_below="@+id/sendAddressInput" />

    <EditText
        android:id="@+id/receiveAddressInput"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/receiverAddress"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@+id/receiveLabel" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submitBtn"
        android:layout_below="@+id/receiveAddressInput"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_back"
        android:layout_below="@+id/submitButton"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="24dp"/>

</RelativeLayout>
</ScrollView>
